# komorebi_app

./: COMMANDS.md  MEMORY.md  README.md  pubspec.yaml
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml  cd.yml  ci.yml  release.yml
.github/workflows-archive/: build-android.yml  build-ios.yml  build-web.yml  build-windows.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/imu/: imu_repository.dart
lib/data/log/: log_repository.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: imu.dart  (+1 more)
lib/ui/home/: feature_page.dart  home_page.dart
lib/ui/imu/: imu_page.dart
lib/ui/landing/: landing_page.dart
lib/ui/log/: log_page.dart
lib/view_model/: imu_view_model.dart  log_view_model.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: imu.rs  mod.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_komorebi_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_komorebi_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
