[package]
name = "rust_lib_komorebi_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ahrs = "0.8.0"
flutter_rust_bridge = "=2.11.1"
nalgebra = "0.34.1"
once_cell = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
